Cambio de tipografia

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
     <title>Sistema de Tickets</title>
     <link rel="stylesheet" href="/static/css/styles.css">
     {% block extra_css %}{% endblock %}
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
