--- a/app/staticfiles/css/styles.css
+++ b/app/staticfiles/css/styles.css
@@ -1,7 +1,7 @@
 /* Agrega al final de styles.css */
 /* app/static/css/styles.css */
 body {
-    font-family: Montserrat, sans-serif;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     line-height: 1.6;
