--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -5,23 +5,39 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
+    background-color: #F9FAFB;
 }
 
+
 header {
-    background: #333;
-    color: #fff;
-    padding: 1rem;
+    background: #ffffff;
+    color: #210606;
+    padding: 1.5rem;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+}
+
+.tickets-cabecera {
+    display:flex;
     justify-content: space-between;
     align-items: center;
 }
 
 header h1 {
     margin: 0;
+    font-size: 1rem;
+}
+
+header h2 {
+    /*margin: 0;*/
+    font-weight: 500;
+    font-size: 15px;
 }
 
 nav a {
-    color: #fff;
+    color: #160101;
     text-decoration: none;
     margin-left: 1rem;
 }
@@ -32,6 +48,18 @@ nav a:hover {
 
 main {
     padding: 2rem;
+}
+
+
+
+/* Contenedor de la tabla - para el fondo blanco y sombra */
+.tickets-bloque {
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    padding: 1.5rem;
+    margin-top: 1rem;
+    overflow-x: auto;  /* Para hacer responsive en móviles */
 }
 
 .ticket-form {
@@ -66,7 +94,7 @@ main {
 }
 
 .btn-submit, .btn-new {
-    background: #007bff;
+    background: #6C63FF;
     color: white;
     padding: 0.5rem 1rem;
     border: none;
@@ -74,6 +102,7 @@ main {
     cursor: pointer;
     text-decoration: none;
     display: inline-block;
+    font-size: 12px;
 }
 
 .btn-submit:hover, .btn-new:hover {
@@ -88,17 +117,21 @@ table {
 }
 
 th, td {
-    border: 1px solid #ddd;
+    border-top: 1px solid #e6e4e4;
+    border-bottom: 1px solid #e6e4e4;
     padding: 8px;
     text-align: left;
+    font-size: 12px;
 }
 
 th {
-    background-color: #f2f2f2;
+    background-color: #12171F;
+    color: #f0f8ff
 }
 
-tr:nth-child(even) {
-    background-color: #f9f9f9;
+  
+table tbody tr:nth-child(odd) {
+    background-color: #FFFFFF; 
 }
 
 .error {
@@ -125,7 +158,7 @@ tr:nth-child(even) {
 
 /* Agrega al final de styles.css */
 .ticket-row:hover {
-    background-color: #f0f8ff;
+    background-color: #f7fbff;
 }
 
 .actions {
@@ -135,20 +168,21 @@ tr:nth-child(even) {
 .btn-edit, .btn-delete, .btn-save, .btn-cancel {
     padding: 0.25rem 0.5rem;
     margin: 0 0.25rem;
-    font-size: 0.875rem;
     border-radius: 3px;
     cursor: pointer;
+    font-size: 12px;
 }
 
 .btn-edit {
-    background-color: #ffc107;
-    border: 1px solid #d39e00;
+    background-color: #6C63FF;
+    border-color: #6C63FF ;
+    color: #fff;
 }
 
 .btn-delete {
     background-color: #dc3545;
-    color: white;
-    border: 1px solid #bd2130;
+    border-color: #dc3545;
+    color: #fff
 }
 
 .btn-save {
