--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="{{ csrf_token }}">
-    <title>Sistema de Tickets</title>
+    <title>HelpDesk Rocio</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/styles.css">
     
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>Sistema de Tickets</h1>
+        <h1>HelpDesk Rocio</h1>
         <nav>
             <a href="{% url 'ticket_list' %}">Inicio</a>
             <a href="{% url 'create_ticket' %}">Nuevo Ticket</a>
