--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,7 @@
     <div class="layout-container">
         <!-- Barra lateral -->
         <aside class="sidebar">
+            <h2>Tickets Rocio</h2>
             <nav class="sidebar-nav">
                 <ul>
                     <li>
